fix: typos in docs & issues with ratelimit
