# docs/swagger.json
@@ -6,7 +6,7 @@
     "paths": {
         "/api/v1/auth/login": {
             "post": {
-                "description": "Login with username (firstname.lastname) and your student ID as the password. Returns a JWT valid for 24 hours. For public demo access, skip this endpoint and use the token \"dmeo-key\" directly in the Authorization header.",
+                "description": "Login with username (firstname.lastname) and your student ID as the password. Returns a JWT valid for 24 hours. For public demo access, skip this endpoint and use the token \"demo-key\" directly in the Authorization header.",
                 "consumes": [
                     "application/json"
                 ],
@@ -210,7 +210,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "subject"
+                            "$ref": "#/definitions/handlers.Student"
                         }
                     },
                     "404": {
